--- a/pages/producto.html
+++ b/pages/producto.html
@@ -54,11 +54,11 @@
                             Productos
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="./pages/producto.html">Electrodomésticos</a></li>
-                            <li><a class="dropdown-item" href="./pages/producto.html">Computación</a></li>
-                            <li><a class="dropdown-item" href="./pages/producto.html">Celulares</a></li>
-                            <li><a class="dropdown-item" href="./pages/producto.html">Accesorios</a></li>
-                            <li><a class="dropdown-item" href="./pages/producto.html">Televisores</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Electrodomésticos</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Computación</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Celulares</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Accesorios</a></li>
+                            <li><a class="dropdown-item" href="./producto.html">Televisores</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
